@@ -15,6 +15,9 @@ version ? (????-??-??):
   - bugfix in perl scripts for 64-bit architectures (Jarek Dziubek)
   - BTS#0000495: fixed "Invalid argument..." error in liability report (alec)
   - fixed Cash Receipt List filtering by value (alec)
+  - fixed error triggers in netadd and netedit (alec)
+  - fixed network size checking in network edition (alec)
+  - fixed warning in NetworkCompress() function (alec)
 
 version 1.9.0 Tilgath (2005-12-07):
 
